code base structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-Flask==1.1.2
-Flask==1.1.2
-Flask-Cors==3.0.8
-Jinja2==2.11.2
-requests==2.18.4
-pycodestyle==2.6.0
-MarkupSafe==2.0.1
-itsdangerous==2.0.1
-werkzeug==2.0.3
+flask_sqlalchemy==3.1.1
+greenlet==3.0.1
+sqlalchemy==2.0.23
+typing_extensions==4.8.0
