--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Jinja2==3.1.2
 Mako==1.3.0
 MarkupSafe==2.1.3
 psycopg2-binary==2.9.9
+PyJWT==2.8.0
 SQLAlchemy==2.0.23
 typing-extensions==4.8.0
 werkzeug==3.0.1
