--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ Flask-Cors==4.0.0
 Flask-Migrate==4.0.5
 flask-sqlalchemy==3.1.1
 greenlet==3.0.1
+gunicorn==21.2.0
 importlib-metadata==6.8.0
 importlib-resources==6.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.3.0
 MarkupSafe==2.1.3
+packaging==23.2
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 SQLAlchemy==2.0.23
